Second commit of the Configuration Sample Project

--- a/Core/System/Configuration/appsettings.Development.json
+++ b/Core/System/Configuration/appsettings.Development.json
@@ -9,5 +9,15 @@
   },
   "Custom_Production": {
     "MyCustomKey": "Development Key"
+  },
+  "spring": {
+    "application": {
+      "name": "Configuration"
+    },
+    "cloud": {
+      "config": {
+        "uri": "http://localhost:8888"
+      }
+    }
   }
 }
