--- a/Core/System/Configuration/appsettings.json
+++ b/Core/System/Configuration/appsettings.json
@@ -7,5 +7,15 @@
   },
   "Custom_Production": {
     "MyCustomKey": "Production Key"
+  },
+  "spring": {
+    "application": {
+      "name": "Configuration"
+    },
+    "cloud": {
+      "config": {
+        "uri": "http://localhost:8888"
+      }
+    }
   }
 }
