--- a/Core/System/Configuration/Configuration.csproj
+++ b/Core/System/Configuration/Configuration.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Commandline" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
+    <PackageReference Include="Pivotal.Extensions.Configuration.ConfigServer" Version="1.0.1" />
   </ItemGroup>
 </Project>
