Second commit of configuration application

--- a/Core/System/Configuration/appsettings.Development.json
+++ b/Core/System/Configuration/appsettings.Development.json
@@ -7,7 +7,7 @@
       "Microsoft": "Information"
     }
   },
-  "Custom_Production": {
+  "Custom_Local_Config": {
     "MyCustomKey": "Development Key"
   },
   "spring": {
