--- a/Core/System/Configuration/appsettings.json
+++ b/Core/System/Configuration/appsettings.json
@@ -5,7 +5,7 @@
       "Default": "Warning"
     }
   },
-  "Custom_Production": {
+  "Custom_Local_Config": {
     "MyCustomKey": "Production Key"
   },
   "spring": {
